# ITMO_Big_Data_lab1_CI-CD

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  config.ini  data.dvc  main.py  models.dvc  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/exp/: exp_1.yaml  exp_2.yaml  exp_3.yaml
data/processed/: x_test.csv  y_test.csv  y_train.csv
models/exp_3/: model.joblib  settings.json  vectorizer.joblib
notebooks/: solusion1.ipynb
scripts/: run_exp.py
src/: classifier.py  preprocessing.py  preprocessor.py  utils.py
src/settings/: base.py  classifier.py  config.py  preprocessor.py
src/unit_tests/: test_classifier.py  test_preprocessor.py
tests/: test_main.py
